Fixed transform categories card on mobile /categories

--- a/src/partials/categories.scss
+++ b/src/partials/categories.scss
@@ -164,6 +164,7 @@ body{
                     &.bottom-right{
                         max-width: 100%;
                         width: 100%;
+                        transform: none!important;
                         align-self: normal;
                     }
                     &.bottom-left{
